--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,23 +1,124 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+
+<div class="row row-content" ng-show="isAuthenticated(); isAdmin()">    
+    <div class="col-xs-12">
+        <h4>DM Aware Administration</h4>
+    </div>
+    <div class="col-xs-12">
+        <ul class="nav nav-tabs" role="tablist">
+            <li role="presentation" ng-class="{active:isSelected(1)}">
+            <a ng-click="select(1); subSelect(1)" aria-controls="users" role="tab">Users</a>
+            </li>
+            <li role="presentation" ng-class="{active:isSelected(2)}">
+            <a ng-click="select(2); subSelect(1)" aria-controls="teams" role="tab">Teams</a>
+            </li>
+            <li role="presentation" ng-class="{active:isSelected(3)}">
+            <a ng-click="select(3); subSelect(1);" aria-controls="configuration" role="tab">Configuration</a>
+            </li>
+        </ul>
+
+        <div class="tab-content">
+            <div id="tabContent" class="tab-pane fade in active" ng-show="isSelected(1)">
+            Users selected
+            </div>
+            <div id="tabContent" class="tab-pane fade in active" ng-show="isSelected(2)">
+            Teams Selected
+            </div>
+            <div id="tabContent" class="tab-pane fade in active" ng-show="isSelected(3)">
+            Configuration selected
+            </div>
+        </div>
+    </div>
 </div>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
+<div class="row row-content" ng-show="isAuthenticated(); !isAdmin()">    
+    <div class="col-xs-12">
+        <h4>DM Aware User Tools</h4>
+    </div>
+    <div class="col-xs-12">
+        <ul class="nav nav-tabs" role="tablist">
+            <li role="presentation" ng-class="{active:isSelected(1)}">
+            <a ng-click="select(1); subSelect(1)" aria-controls="users" role="tab">Intro</a>
+            </li>
+            <li role="presentation" ng-class="{active:isSelected(2)}">
+            <a ng-click="select(2); subSelect(1)" aria-controls="teams" role="tab">Race</a>
+            </li>
+            <li role="presentation" ng-class="{active:isSelected(3)}">
+            <a ng-click="select(3); subSelect(1);" aria-controls="configuration" role="tab">Class</a>
+            </li>
+            <li role="presentation" ng-class="{active:isSelected(4)}">
+            <a ng-click="select(4); subSelect(1);" aria-controls="configuration" role="tab">Alignment</a>
+            </li>
+            <li role="presentation" ng-class="{active:isSelected(5)}">
+            <a ng-click="select(5); subSelect(1);" aria-controls="configuration" role="tab">Abilities</a>
+            </li>
+            <li role="presentation" ng-class="{active:isSelected(6)}">
+            <a ng-click="select(6); subSelect(1);" aria-controls="configuration" role="tab">Skills</a>
+            </li>
+            <li role="presentation" ng-class="{active:isSelected(7)}">
+            <a ng-click="select(7); subSelect(1);" aria-controls="configuration" role="tab">Equipment</a>
+            </li>
+            <li role="presentation" ng-class="{active:isSelected(8)}">
+            <a ng-click="select(8); subSelect(1);" aria-controls="configuration" role="tab">Spellcasting</a>
+            </li>
+        </ul>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+        <div class="tab-content">
+            <div id="tabContent" class="tab-pane fade in active" ng-show="isSelected(1)">
+                <div><img src="http://www.patrickborrelli.com/images/dropW.jpg" style="height: 75px; float: left; padding-right: 10px; padding-bottom: 5px;"/>
+                </div>
+                <div>
+                    elcome to the DMAware character generation utility.  This tool provides for automation of Dungeons and Dragons 5th Edition character creation, simplifying some of the more intricate details in the D&amp;D 5e rules, and at the end of the process it will produce a PDF D&amp;D Character Sheet suitable for printing for your own records as well as emailing to your Dungeon Master, or anyone else who needs a copy.<br/><br/>
+                    DMAware will take you through a step-by-step process, asking you for selections along the way.  You will make all of the fun decisions, and DMAware will do all of the mundane work.<br/><br/>
+                    Enter the information required below and click on Begin to get started!
+                </div><br/>
+                
+                <!-- insert form here -->
+                <form name="introform" class="form-horizontal" >
+                    <div class="form-group custom-padding">
+                        <label class="sr-only" for="playername">Player Name</label>
+                        <div class="col-xs-8">
+                            <div class="input-group">
+                                <div class="input-group-addon custom-width-140">Player Name</div>
+                                <input type="text" class="form-control input-sm" id="playername" ng-model="registration.playername" disabled>
+                            </div>                    
+                        </div>
+                    </div>
+                    <div class="form-group custom-padding-bottom">
+                        <label class="sr-only" for="charactername">Character Name</label>
+                        <div class="col-xs-8">
+                            <div class="input-group">
+                                <div class="input-group-addon custom-width-140">Character Name</div>
+                                <input type="text" class="form-control input-sm" id="charactername" ng-model="registration.charactername">
+                            </div>                    
+                        </div>
+                    </div>         
+                        <button type="button" style="margin-left: 16px;" class="btn btn-info btn-xs" ng-click="select(2)">Begin</button>
+                    
+                </form>
+                
+                <!-- end of form -->
+            </div>
+            <div id="tabContent" class="tab-pane fade in active" ng-show="isSelected(2)">
+            Race Selected
+            </div>
+            <div id="tabContent" class="tab-pane fade in active" ng-show="isSelected(3)">
+            Class selected
+            </div>
+            <div id="tabContent" class="tab-pane fade in active" ng-show="isSelected(4)">
+            Alignment selected
+            </div>
+            <div id="tabContent" class="tab-pane fade in active" ng-show="isSelected(5)">
+            Abilities selected
+            </div>
+            <div id="tabContent" class="tab-pane fade in active" ng-show="isSelected(6)">
+            Skills selected
+            </div>
+            <div id="tabContent" class="tab-pane fade in active" ng-show="isSelected(7)">
+            Equipment selected
+            </div>
+            <div id="tabContent" class="tab-pane fade in active" ng-show="isSelected(8)">
+            Spellcasting selected
+            </div>
+        </div>
+    </div>
 </div>
